[project]
name = "markdown-reporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "morning-start", email = "morning-start@foxmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
